test-results/refptr.err
examples/refptr.c: In function ‘_Node_method_Create’:
examples/refptr.c:331:22: warning: implicit declaration of function ‘calloc’ [-Wimplicit-function-declaration]
  331 |     struct Node* n = calloc(1, sizeof(struct Node));
      |                      ^~~~~~
examples/refptr.c:1:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘calloc’
  +++ |+#include <stdlib.h>
    1 | extern int puts (const char *s);
examples/refptr.c:331:22: warning: incompatible implicit declaration of built-in function ‘calloc’ [-Wbuiltin-declaration-mismatch]
  331 |     struct Node* n = calloc(1, sizeof(struct Node));
      |                      ^~~~~~
examples/refptr.c:331:22: note: include ‘<stdlib.h>’ or provide a declaration of ‘calloc’
examples/refptr.c: In function ‘main’:
examples/refptr.c:347:9: error: unknown type name ‘RefPtr_Foo’
  347 |         RefPtr_Foo p1 = _Generic((malloc(sizeof(struct Foo))), struct Foo*: _wrap_Foo, void*: _wrap_Foo, RefPtr_Foo: _copy_Foo)(malloc(sizeof(struct Foo)));
      |         ^~~~~~~~~~
examples/refptr.c:347:77: error: ‘_wrap_Foo’ undeclared (first use in this function)
  347 |         RefPtr_Foo p1 = _Generic((malloc(sizeof(struct Foo))), struct Foo*: _wrap_Foo, void*: _wrap_Foo, RefPtr_Foo: _copy_Foo)(malloc(sizeof(struct Foo)));
      |                                                                             ^~~~~~~~~
examples/refptr.c:347:77: note: each undeclared identifier is reported only once for each function it appears in
examples/refptr.c:348:11: error: request for member ‘ptr’ in something not a structure or union
  348 |         p1.ptr->id = 1;
      |           ^
examples/refptr.c:349:35: error: request for member ‘ptr’ in something not a structure or union
  349 |         printf("  p1 id: %d\n", p1.ptr->id);
      |                                   ^
examples/refptr.c:352:13: error: unknown type name ‘RefPtr_Foo’
  352 |             RefPtr_Foo p2 = _Generic((p1), struct Foo*: _wrap_Foo, void*: _wrap_Foo, RefPtr_Foo: _copy_Foo)(p1);
      |             ^~~~~~~~~~
examples/refptr.c:353:39: error: request for member ‘ptr’ in something not a structure or union
  353 |             printf("  p2 id: %d\n", p2.ptr->id);
      |                                       ^
examples/refptr.c:354:13: error: unknown type name ‘RefPtr_Foo’
  354 |             RefPtr_Foo p3 = _Generic((_Foo_method_Create()), struct Foo*: _wrap_Foo, void*: _wrap_Foo, RefPtr_Foo: _copy_Foo)(_Foo_method_Create());
      |             ^~~~~~~~~~
examples/refptr.c:355:39: error: request for member ‘ptr’ in something not a structure or union
  355 |             printf("  p3 id: %d\n", p3.ptr->id);
      |                                       ^
examples/refptr.c:356:41: error: ‘_assign_wrap_Foo’ undeclared (first use in this function)
  356 |             _Generic((p2), struct Foo*: _assign_wrap_Foo, void*: _assign_wrap_Foo, RefPtr_Foo: _assign_copy_Foo)(&p3, p2);
      |                                         ^~~~~~~~~~~~~~~~
examples/refptr.c:357:57: error: request for member ‘ptr’ in something not a structure or union
  357 |             printf("  p3 assigned from p2, id: %d\n", p3.ptr->id);
      |                                                         ^
examples/refptr.c:358:13: error: unknown type name ‘RefPtr_Foo’
  358 |             RefPtr_Foo p4;
      |             ^~~~~~~~~~
examples/refptr.c:360:15: error: request for member ‘ptr’ in something not a structure or union
  360 |             p4.ptr->id = 4;
      |               ^
examples/refptr.c:361:39: error: request for member ‘ptr’ in something not a structure or union
  361 |             printf("  p4 id: %d\n", p4.ptr->id);
      |                                       ^
examples/refptr.c:362:9: warning: implicit declaration of function ‘_release_Foo’ [-Wimplicit-function-declaration]
  362 |         _release_Foo(p4); _release_Foo(p3); _release_Foo(p2); }
      |         ^~~~~~~~~~~~
examples/refptr.c:368:9: error: unknown type name ‘RefPtr_Node’
  368 |         RefPtr_Node n1;
      |         ^~~~~~~~~~~
examples/refptr.c:369:11: error: request for member ‘ptr’ in something not a structure or union
  369 |         n1.ptr->value = 10;
      |           ^
examples/refptr.c:370:38: error: request for member ‘ptr’ in something not a structure or union
  370 |         printf("  n1 value: %d\n", n1.ptr->value);
      |                                      ^
examples/refptr.c:371:9: error: unknown type name ‘RefPtr_Node’
  371 |         RefPtr_Node n2 = n1;
      |         ^~~~~~~~~~~
examples/refptr.c:372:52: error: request for member ‘ptr’ in something not a structure or union
  372 |         printf("  n2 shares n1. RefCount: %d\n", n1.ptr->ref_count);
      |                                                    ^
examples/refptr.c:373:5: warning: implicit declaration of function ‘_release_Node’ [-Wimplicit-function-declaration]
  373 |     _release_Node(n2); _release_Node(n1); }
      |     ^~~~~~~~~~~~~
